# Hows-My-Eating

./: .gitignore  README.md
Stage1_DataCollection/HowsMyEating_DataCollection/: CameraControlView.swift  ContentView.swift  HowsMyEating_DataCollectionApp.swift  Info.plist  README.md
Stage1_DataCollection/HowsMyEating_DataCollection.xcodeproj/: project.pbxproj
Stage1_DataCollection/HowsMyEating_DataCollection/Capture/: DeviceLookup.swift
Stage1_DataCollection/HowsMyEating_DataCollection/Manager/: CameraManager.swift  CaptureManager.swift  FileManagerHelper.swift  MotionManager.swift
Stage1_DataCollection/HowsMyEating_DataCollection/Model/: DataTypes.swift  MediaLibrary.swift
Stage1_DataCollection/HowsMyEating_DataCollection/ViewController/: ActivityViewController.swift  CameraControlView.swift  CameraView.swift  MotionManagerViewRepresentable.swift
Stage1_DataCollection/HowsMyEating_DataCollection/Views/: CameraControlView.swift  DetailedRecordingView.swift
Stage1_DataCollection/HowsMyEating_DataCollectionTests/: HowsMyEating_DataCollectionTests.swift
Stage1_DataCollection/HowsMyEating_DataCollectionUITests/: HowsMyEating_DataCollectionUITests.swift  HowsMyEating_DataCollectionUITestsLaunchTests.swift
Stage2_Labelling/: README.md  index.html  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.js
Stage2_Labelling/src/: App.tsx  typings.d.ts
Stage2_Labelling/src-tauri/: Cargo.toml  tauri.conf.json
Stage2_Labelling/src-tauri/src/: main.rs
Stage2_Labelling/src/utils/: formatting.ts  (+2 more)
Stage2_Labelling/utils/: video_converter.py
(+13 files in other folders)
